add_subdirectory(01.Development_environment)
add_subdirectory(02.Draw_a_triangle)
add_subdirectory(03.Vertex_buffer)
add_subdirectory(04.Uniform_buffer)
add_subdirectory(05.Texture_buffer)
add_subdirectory(06.depth_buffering)
add_subdirectory(07.model_loading)
add_subdirectory(08.mipmapping)
add_subdirectory(09.multisampling)
add_subdirectory(GlslToSpirv)